# raspberrypi_people_detection

./: Cargo.toml  README.md  package-debian.sh
Documantation/: code.md
linux/raspberrypi_people_detection_1.0.0-1_amd64/DEBIAN/: control
src/: main.rs
