[package]
name = "rasberry_people_detection"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
opencv = { version = "0.69.0", default-features = false, features = [
    "imgproc",
    "highgui",
    "videoio",
    "objdetect"
]}